Bug 1607224 - Data race on CacheFileHandle::mFileSize r=valentin

This patch fixes data race on CacheFileHandle::mFileSize when accessed on main thread by nsHttpChannel::ReportNetVSCacheTelemetry(). All other usages are on cache I/O thread.

Differential Revision: https://phabricator.services.mozilla.com/D60407